--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 h1 {
     color: grey;
     font-family: verdana;
+    text-align: center;
 }
 
 .maindiv {
@@ -15,5 +16,5 @@ h1 {
     width: 300px;
     padding: 20px;
     border-radius: 25px;
-    text-align: center;
+    text-align: left;
 }
