--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h2 {
 
 input, select, textarea {
   width: 35%;           /* Fills parent container width */
-  max-width: 260px;       /* Prevents overflow */
+  max-width: 50%;       /* Prevents overflow */
   padding: 4px;
   margin: 4px 0;
   box-sizing: border-box; /* Includes padding in the width */
